# MPointers-ABG

./: CMakeLists.txt  README.md
Gtest/: test_algoritmos_ordenamiento.cpp  test_lista_ordenamiento.cpp  test_mpointer.cpp  test_mpointer_gc.cpp  test_mpointer_list.cpp
include/: MPointer.h  MPointerGC.h  MPointerList.h  algoritmosOrdenamiento.h  lista_ordenamiento.h
src/: MPointer.cpp  MPointerGC.cpp  algoritmosOrdenamiento.cpp  main.cpp
